# Gitarium

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  agent-headless.ts  browser-test.html  build-html.ts  index.html  proxy-server.ts  serve.ts  test-browser.ts
.devcontainer/: Dockerfile  README.md  auto-serve.sh  devcontainer.json
.github/workflows/: ci.yml
crates/agent/: Cargo.toml  build.rs  build_prompts.rs
crates/agent/src/: lib.rs
crates/agent/src/agent/: calls.rs  compact.rs  exec.rs  headless.rs  mod.rs  prompts.rs  tests.rs  tools.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/app/: actions.rs  agent_approval.rs  agent_compact.rs  agent_history.rs  agent_loop.rs  auth.rs  chat.rs  code_keys.rs  commit.rs  download.rs  file_msgs.rs  files.rs  input.rs  issue_actions.rs  issue_detail.rs  issue_msgs.rs  issue_search.rs  issues.rs  join.rs  keys.rs  menu.rs  mod.rs  msg.rs  msg_dispatch.rs  overlays.rs  repo.rs  repo_branches.rs  repo_msgs.rs  repos.rs  run_actions.rs  search.rs  staging.rs  state.rs  tree.rs
crates/app/src/app/editor/: keys.rs  tests.rs  undo.rs
crates/app/src/app/settings/: collaborators.rs  deploy_keys.rs  form.rs  form_key.rs  general.rs  keymap.rs  mod.rs  secrets_vars.rs  webhooks.rs
crates/core/: Cargo.toml  build.rs  knowledge.toml
crates/core/knowledge/github-api/references/: actions-artifacts.md  actions-cache.md  actions-concurrency-groups.md  actions-oidc.md  actions-permissions.md  actions-secrets.md  actions-self-hosted-runner-groups.md  actions-self-hosted-runners.md  actions-variables.md  actions-workflows.md  activity-events.md  activity-feeds.md  activity-notifications.md  activity-starring.md  agent-tasks.md  agents-secrets.md  agents-variables.md  apps-installations.md  apps-marketplace.md  apps-webhooks.md  apps.md  billing-usage.md  branches.md  checks-runs.md  checks-suites.md  code-quality.md  code-scanning.md  code-security-configurations.md  codespaces-machines.md  codespaces-organizations.md  codespaces-repository-secrets.md  codespaces-secrets.md  codespaces.md  collaborators-invitations.md  collaborators.md  commits.md  conventions.md  copilot-coding-agent-management.md  copilot-content-exclusion-management.md  copilot-spaces-resources.md  (+76 more)
crates/core/src/: crypto.rs  fetch.rs  lib.rs  store.rs
crates/core/src/archive/: gzip.rs  mod.rs  tar.rs  tests.rs
crates/core/src/github/: actions.rs  checks.rs  content.rs  gitdb.rs  graphql.rs  issues.rs  mod.rs  pulls.rs  repos.rs  search.rs  tests.rs  types.rs
crates/core/src/github/settings/: collaborators.rs  deploy_keys.rs  general.rs  mod.rs  secrets.rs  types.rs  variables.rs  webhooks.rs
crates/core/src/proxy/: mod.rs  socket.rs
crates/core/src/sh/: cmds_filter.rs  cmds_text.rs  jq.rs  tests.rs  words.rs
crates/headless/: Cargo.toml
crates/headless/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/render/src/px/: atlas.rs  emoji.rs  mod.rs
crates/render/src/px/draw/: mod.rs  text.rs
crates/render/src/px/render/: canvas2d.rs  glyphs.rs  shaders.rs  webgl.rs
crates/render/src/px/view/: actions_log.rs  actions_pane.rs  agent_draw.rs  agent_pane.rs  agent_text.rs  chrome.rs  context_menu.rs  dom.rs  editor_pane.rs  frame.rs  hints.rs  input.rs  issue_detail_body.rs  issue_detail_pane.rs  issues_pane.rs  links.rs  mod.rs  overlay_agent.rs  overlay_commit.rs  overlay_pick.rs  overlay_settings.rs  overlays.rs  repo_card.rs  repo_pane.rs  repos_pane.rs  scroll.rs  settings_content.rs  settings_pane.rs  tests.rs  tree_pane.rs  widgets.rs
crates/render/src/px/view/md/: block.rs  code.rs  draw.rs  inline.rs  layout.rs  mod.rs  select.rs  shortcode.rs  table.rs  tests.rs
crates/render/tests/: glyphs.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/highlight/: langs.rs  mod.rs
crates/ui/src/ui/: grid.rs  input.rs  lineinput.rs  theme.rs
docs/: ARCHITECTURE.md  knowledge-modules.md
knowledge/github-api/: SKILL.md
knowledge/github-api/references/: actions-hosted-runners.md  actions-workflow-jobs.md  actions-workflow-runs.md  activity-watching.md  apps-oauth-applications.md  billing-budgets.md  branches-branch-protection.md  campaigns.md  classroom.md  codes-of-conduct.md  codespaces-organization-secrets.md  commits-comments.md  commits-statuses.md  conventions.md  copilot-cloud-agent-management.md  copilot-metrics.md  copilot-spaces-collaborators.md  copilot-spaces.md  copilot-usage-metrics.md  dependency-graph-sboms.md  deploy-keys.md  deployments-environments.md  git-refs.md  git-trees.md  interactions-repos.md  interactions-user.md  issues-milestones.md  meta.md  metrics-traffic.md  migrations-source-imports.md  migrations-users.md  orgs-api-insights.md  orgs-artifact-metadata.md  orgs-members.md  orgs-organization-roles.md  orgs-rule-suites.md  orgs-rules.md  orgs-security-managers.md  orgs.md  pages.md  (+9 more)
obfuscator/: Cargo.toml  README.md
obfuscator/src/: code_obf.rs  data_xor.rs  main.rs
scripts/: agent-headless.ts  build-html.ts  build-release.sh  gen_github_api_module.py  proxy-server.ts  serve.ts
src/: agent.rs  fetch.rs  github.rs  highlight.rs  knowledge.rs  lib.rs  sh.rs  vfs.rs  web_input.rs
src/agent/: exec.rs  mod.rs  tests.rs
src/app/: agent_compact.rs  auth.rs  code_keys.rs  code_search.rs  editor.rs  file_msgs.rs  files.rs  input.rs  keys.rs  mod.rs  msg.rs  overlays.rs  repo.rs  repo_msgs.rs  search.rs  state.rs  tree.rs
src/app/editor/: mod.rs
src/github/: content.rs  mod.rs  search.rs  types.rs
src/highlight/: mod.rs
src/px/: anim.rs  atlas.rs  draw.rs  gl.rs  mod.rs  theme.rs  view.rs
src/px/draw/: text.rs
src/px/render/: mod.rs
src/px/view/: agent_draw.rs  agent_pane.rs  agent_text.rs  chrome.rs  editor_pane.rs  frame.rs  input.rs  mod.rs  overlay_grep.rs  overlay_pick.rs  overlays.rs  repo_pane.rs  repos_pane.rs  tests.rs  text.rs  tree_pane.rs
src/sh/: cmds_fs.rs  cmds_text.rs  exec.rs  mod.rs  parse.rs  tests.rs
src/ui/: mod.rs
tests/: test-browser.ts
