[package]
name = "rustvm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdue = "0.9"
base64 = "0.22"
jaq-core = "3.1.0"
# Note: jaq adds ~1.5MB to the wasm (jq engine + jiff tzdb via jaq-std's
# `time` feature, which jaq-json's hard dependency re-enables either way).
jaq-std = "3.0.1"
jaq-json = "2.0.1"
shlex = "2.0.1"
regex-lite = "0.1.9"
# Inflate-only at runtime (knowledge bundle); deflate happens in build.rs.
miniz_oxide = "0.8"

[build-dependencies]
miniz_oxide = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "Headers",
  "Navigator",
  "Request",
  "RequestInit",
  "Response",
  "Storage",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "WebGlRenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
]

[profile.release]
opt-level = "s"
lto = true
