[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdue = "0.9"
base64 = "0.22"
jaq-core = "3.1.0"
# jaq-std is vendored (vendor/jaq-std) via [patch.crates-io] below: a slim
# fork that drops jiff's bundled IANA tzdb (~260 KB of dead weight on wasm).
# See vendor/jaq-std/VENDOR.md.
jaq-std = "3.0.1"
jaq-json = "2.0.1"
shlex = "2.0.1"
# The shell's grep/find regex engine. regex-lite is leaner than reusing jaq's
# regex-bites for our minimal is_match needs (measured ~3-5 KB smaller); if
# richer regex is ever needed, regex-bites is already linked via jaq-std.
regex-lite = "0.1.9"
# Inflate-only at runtime (knowledge bundle); deflate happens in build.rs.
miniz_oxide = "0.8"
web-sys = "0.3"
# Local crates, layered by functionality (see each crate's lib.rs header).
gitarium-core = { path = "crates/core" }
gitarium-agent = { path = "crates/agent" }
gitarium-ui = { path = "crates/ui" }
gitarium-app = { path = "crates/app" }
gitarium-render = { path = "crates/render" }

# ---------------------------------------------------------------------------
# Root package: the browser (web + interactive agent) wasm target. Other
# targets are separate cdylibs under crates/ (e.g. crates/headless).
# ---------------------------------------------------------------------------
[package]
name = "gitarium"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gitarium-core = { workspace = true }
gitarium-ui = { workspace = true }
gitarium-app = { workspace = true }
gitarium-render = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Navigator", "Clipboard"] }

[profile.release]
opt-level = "z"      # optimize for size (vs "s"; measured smaller here)
lto = "fat"          # whole-program inlining across all crates
codegen-units = 1    # one unit → best cross-function size optimization
panic = "abort"      # drop unwind tables + landing pads (wasm traps anyway)
strip = true
# Path sanitization + panic-string removal happen in scripts/build-release.sh
# (RUSTFLAGS --remap-path-prefix + nightly panic_immediate_abort). The stable
# `trim-paths` profile option would be cleaner but is still nightly-gated as of
# cargo 1.92, and enabling it here breaks `cargo check`/`cargo test` on stable.

# wasm-pack runs its managed wasm-opt over the bindgen output; -Oz optimizes
# aggressively for size (default is -O). The --enable-* flags let wasm-opt's
# validator accept the wasm features modern rustc emits by default (without
# them it rejects the binary and skips optimization).
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '-Oz',
    '--enable-bulk-memory',
    '--enable-nontrapping-float-to-int',
    '--enable-sign-ext',
    '--enable-mutable-globals',
    '--enable-reference-types',
    '--enable-multivalue',
]

# Slim jaq-std fork: jiff without the bundled tzdb (~260 KB off the wasm).
# See vendor/jaq-std/VENDOR.md.
[patch.crates-io]
jaq-std = { path = "vendor/jaq-std" }
