[package]
name = "gitarium-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
serde_json = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gitarium-core = { workspace = true }
gitarium-agent = { workspace = true }
gitarium-ui = { workspace = true }
