[package]
name = "rustvm-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true }
shlex = { workspace = true }
regex-lite = { workspace = true }
miniz_oxide = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Headers",
    "MessageEvent",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "WebSocket",
    "Window",
] }

[build-dependencies]
miniz_oxide = { workspace = true }
