[package]
name = "gitarium-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
fontdue = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
gitarium-core = { workspace = true }
gitarium-agent = { workspace = true }
gitarium-ui = { workspace = true }
gitarium-app = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Blob",
  "Url",
  "Storage",
  "Navigator",
  "Clipboard",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "WebGlRenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
]
